--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cat Image</title>
+    <link rel="stylesheet" href="./src/style.css" />
+    <title>Cat Search</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="src/api.js"></script>
+    <script src="src/SearchInput.js"></script>
+    <script src="src/App.js"></script>
     <script src="src/main.js"></script>
   </body>
 </html>
