--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="src/api.js"></script>
-    <script src="src/SearchInput.js"></script>
-    <script src="src/App.js"></script>
-    <script src="src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
